# GATSBI

./: README.md
AirSim_MoveIt/: README.md
AirSim_MoveIt/airsim_moveit_config/: CMakeLists.txt
AirSim_MoveIt/airsim_moveit_config/config/: ompl_planning.yaml  quadrotor.srdf  ros_controllers.yaml  sensors_airsim.yaml  sensors_icuas.yaml  sensors_multiprednbv.yaml
AirSim_MoveIt/airsim_moveit_config/launch/: default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gatsbi.launch  gatsbi.rviz  icuas.launch  icuas.rviz  icuas_moveit_sensor_manager.launch.xml  move_group.launch  move_group_icuas.launch  move_group_multiprednbv.launch  moveit.rviz  multiprednbv.launch  planning_context.launch  planning_context_icuas.launch  prednbv.rviz  ros_controllers.launch  (+5 more)
AirSim_MoveIt/airsim_moveit_navigation/: CMakeLists.txt  package.xml
AirSim_MoveIt/airsim_moveit_navigation/action/: AirSim_Navigation.action
AirSim_MoveIt/airsim_moveit_navigation/include/: AirSim_Navigator.h  AirSim_Navigator_EGO.h  ICUAS_Navigator.h
AirSim_MoveIt/airsim_moveit_navigation/launch/: airsim_navigator.launch  airsim_navigator_baseline.launch  baseline_gatsbi_client.launch  baseline_gatsbi_client_arch_big.launch  baseline_gatsbi_client_garter_bridge.launch  baseline_gatsbi_client_iron_bridge.launch  baseline_gatsbi_client_silo.launch  depth_segmentation.launch  gatsbi_depth_segmentation_1_camera.launch  gatsbi_depth_segmentation_2_camera.launch  icuas.launch  multiprednbv_navigate.launch  navigate.launch  prednbv_depth_segmentation.launch
AirSim_MoveIt/airsim_moveit_navigation/src/: AirSim_Navigator.cpp  AirSim_Navigator_EGO.cpp  ICUAS_Navigator.cpp  airsim_ego_client.cpp  airsim_multiagent_client.cpp  airsim_multiprednbv_navigator_node.cpp  airsim_navigator_client.cpp  airsim_navigator_ego_node.cpp  airsim_navigator_node.cpp  airsim_nbv_planner.cpp  baseline_gatsbi_client.cpp  baseline_nbv.py  chair_depth.npy  depth_segmentation.cpp  display_marker.py  ego_goal.cpp  get_pointcloud.py  icuas_navigator_node.cpp  move_airsim_drone_ego.py  move_airsim_drones.py  multiagent_baseline_nbv.py  multiagent_baseline_nbv_teleport.py  path_saver.py  path_saver_one_time.py  plan_sub.cpp  pointr_reconstruction.py  pointr_reconstruction_multiagent.py  pointr_reconstruction_multiagent_teleport.py  pointr_reconstruction_updated.py  pose_publisher.py  prednbv_AirSim_Navigator.cpp.backup  reconstruction.py  rrt_client.py  transform_odom.cpp
AirSim_MoveIt/airsim_moveit_navigation/src/experiments/PoinTr/ShapeNet55_models/test_test_example_easy/: config.yaml
DJI_MoveIt/: README.md
DJI_MoveIt/airsim_moveit_config/: .setup_assistant  package.xml
DJI_MoveIt/airsim_moveit_navigation/: .inspectionPath.csv.swp  CMakeLists.txt  first_path.txt  inspectionPath.csv  package.xml  path.txt
DJI_MoveIt/airsim_moveit_navigation/include/: AirSim_Navigator.h  DJI_Navigator.h
DJI_MoveIt/airsim_moveit_navigation/launch/: dji_client.launch  dji_node.launch
DJI_MoveIt/airsim_moveit_navigation/src/: AirSim_Navigator.cpp  DJI_Navigator.cpp  airsim_navigator_client.cpp  airsim_navigator_node.cpp  depth_segmentation.cpp  dji_navigator_client.cpp  dji_navigator_node.cpp  get_depth_segmented.py  nav_action_server.cpp  path.txt
GATSBI/3D_bridge_meshes/: .gitmodules  README.md  always_lock.py  get_image.py  image_server.py  pseudoCode.cpp  pub_images.py
GATSBI/3D_bridge_meshes/octomap_mapping/octomap_server/: CMakeLists.txt  package.xml
GATSBI/3D_bridge_meshes/octomap_mapping/octomap_server/include/octomap_server/: OctomapServerHighRes.h  OctomapServerTrimmed.h  kevin_functions.h
GATSBI/3D_bridge_meshes/octomap_mapping/octomap_server/launch/: .export_images.launch.swp  ICUAS_World.launch  MODGATSBI.launch  MODGATSBI_topdown.launch  airsim_zfilter.launch  covered_bridge.launch  export_jpeg.launch  frontier_octo.launch  gatsbi.launch  hardware_offline_GATSBI.launch  octo_gatsbi.launch  octo_gatsbi_ICUAS_world.launch  octo_gatsbi_crop.launch  octo_gatsbi_ego.launch  octo_gatsbi_hardware.launch  octo_gatsbi_hardware_slam.launch  octo_gatsbi_hardware_slam_F3.launch  octo_gatsbi_hardware_slam_bridge.launch  octomap_mapping.launch  octomap_mapping_slam.launch
GATSBI/3D_bridge_meshes/octomap_mapping/octomap_server/src/: OctomapServer.cpp  OctomapServerHighRes.cpp  OctomapServerTrimmed.cpp  airsim_GATSBI.cpp  airsim_MODGATSBI.cpp  airsim_MODGATSBI_topdown.cpp  airsim_visitedPoints_Publisher.cpp  airsim_zFilter.cpp  baseline.cpp  free_cell_publisher.cpp  free_cell_publisher.py  hardware_offline_GATSBI.cpp  hardware_offline_GATSBI_backup.cpp  hardware_visitedPoints_Publisher.cpp  hardware_zFilter.cpp  inspection_path.py  kevin.cpp  kevin_BU_noClustering.cpp  markers.cpp  nbv_pointcloud.cpp  octomap_server_node.cpp  octomap_server_node_highres.cpp  octomap_server_node_trimmed.cpp  octomap_subscriber.cpp  offline_dji_path.py  path_republisher.py  pose_path_publisher.py  sandBox.cpp  visitedPoints_Publisher.cpp  visualize_dji_path.py  zFilter.cpp
airsim_ros_pkgs/: CMakeLists.txt
airsim_ros_pkgs/include/: airsim_ros_wrapper.h
airsim_ros_pkgs/launch/: airsim_node.launch
airsim_ros_pkgs/src/: airsim_ros_wrapper.cpp
point_cloud_processing/: CMakeLists.txt
point_cloud_processing/launch/: airsim_filter_depth_pointclouds.launch  gatsbi_2_camera_pointcloud_filtering_and_merge.launch  gatsbi_airsim_filter_depth_pointclouds_2_cameras.launch  hardware_transform.launch  point_cloud_merge.launch
point_cloud_processing/src/: .velodyne_tf_broadcast.cpp.swp  airsim_depth_pointcloud_filter.cpp  bounding_box.cpp  box_filter.cpp  cluster_height_estimate.cpp  concatenate_cloud.cpp  crop_clusters.cpp  denoise.cpp  fill_clusters.cpp  perimeter_heights.cpp  point_cloud_merge_node.cpp  pointcloud_trimmed.cpp  save_cloud.cpp  save_zed_camera_info.py  save_zed_image.py  transform_and_plane_extraction.cpp  transform_cloud_and_save.cpp  transform_sim_and_save.cpp  transform_zed_cloud_and_save.cpp  transform_zed_pointcloud.cpp  turfgrass_heights.cpp  velodyne_tf_broadcast.cpp  velodyne_trimmed.cpp  voting_scheme.cpp
(+41 files in other folders)
